--- a/style.css
+++ b/style.css
@@ -1,23 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <title>My Final Project</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <header>
-      <h1><!-- Add your site name here --></h1>
-    </header>
-    <nav>
-      <!-- Navigation links go here -->
-    </nav>
-    <main>
-      <!-- Main content sections go here -->
-    </main>
-    <footer>
-      <!-- Footer content -->
-    </footer>
-  </body>
-</html>
+body {
+  font-family: sans-serif;
+  background-color: yellow;
+  color: pink;
+  margin: 30px;
+  padding: 50px;
+}
+
 
