--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  background-color: light yellow;
+  background-color: rgb(249,239,94);
   color: pink;
   margin: 30px;
   padding: 50px;
