--- a/style.css
+++ b/style.css
@@ -12,20 +12,14 @@ header {
   padding: 20px;
   text-align: center;
 
-  .section1 {
+  section {
   margin: 40px;
   padding: 30px;
   background-color: pink;
   border-radius: 15px; 
   }
 
-  .section2 {  margin: 40px;
-  padding: 30px;
-  background-color: pink;
-  border-radius: 15px;
-            }
-
-
+  
 
 
 
