--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
   font-family: sans-serif;
   background-color: gray;
-  color: pink;
+  color: blue;
   margin: 30px;
-  padding: 50px;
+  padding: 10px;
 } 
 
 header {
@@ -12,7 +12,7 @@ header {
   padding: 20px;
   text-align: center;
 
-  section1 {
+  section-1 {
   margin: 40px;
   padding: 30px;
   background-color: pink;
