--- a/style.css
+++ b/style.css
@@ -1,25 +1,24 @@
 body {
   font-family: sans-serif;
   background-color: gray;
-  color: blue;
+  color: yellow;
   margin: 30px;
   padding: 10px;
 } 
 
-header {
+  header {
   background-color: gray;
-  color: yellow;
+  color: black;
   padding: 20px;
-  text-align: center;
-}
+  text-align: center; }
 
-  .section-1{
+  .section {
   margin: 40px;
   padding: 30px;
   background-color: pink;
-  border-radius: 15px; 
   border: 5px solid black;
   width: 50%;
+  color:black;
   }
 
   
