--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   padding: 20px;
   text-align: center; }
 
-  .section-1 {
+  .sectionA {
   margin: 40px;
   padding: 30px;
   background-color: pink;
