--- a/style.css
+++ b/style.css
@@ -21,6 +21,19 @@ body {
   color:black;
   }
 
+ .sectionB {  
+  width: 50%;
+  border: 5px solid pink;
+  background-color: black;
+  padding: 30px;
+  margin: 40px;
+
+  .sectionC { 
+    width: 50%;
+  border: 15px solid black;
+  background-color: pink;
+  padding: 30px;
+  margin: 40px;
   
 
 
