--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: sans-serif;
   background-color: gray;
-  color: yellow;
+  color: pink;
   margin: 30px;
   padding: 10px;
 } 
@@ -26,14 +26,19 @@ body {
   border: 5px solid pink;
   background-color: black;
   padding: 30px;
-  margin: 40px;
+  margin: 40px; 
+   
+ }
 
   .sectionC { 
-    width: 50%;
-  border: 15px solid black;
+  width: 50%;
+  border: 5px solid black;
   background-color: pink;
   padding: 30px;
   margin: 40px;
+  color:black;
+  
+  }
   
 
 
