--- a/style.css
+++ b/style.css
@@ -40,6 +40,37 @@ body {
   
   }
 
+.sectionD { 
+  width: 50%;
+  border: 5px solid pink;
+  background-color: black;
+  padding: 30px;
+  margin: 40px;
+
+}
+
+
+.sectionE { 
+  width: 50%;
+  border: 5px solid black;
+  background-color: pink;
+  padding: 30px;
+  margin: 40px;
+  color:black;
+}
+
+.sectionF { 
+  width: 50%;
+  border: 5px solid pink;
+  background-color: black;
+  padding: 30px;
+  margin: 40px;
+  
+
+  
+ 
+  
+
 
 
   
