--- a/style.css
+++ b/style.css
@@ -65,6 +65,12 @@ body {
   background-color: black;
   padding: 30px;
   margin: 40px;
+
+  img {
+  width: 100%;
+  border-radius: 30px;
+  box-shadow: 50px;
+}
   
 
   
