--- a/style.css
+++ b/style.css
@@ -69,8 +69,14 @@ body {
   img {
   width: 100%;
   border-radius: 30px;
-  box-shadow: 50px;
+  box-shadow: 20px; 
+  }
+
+  #color:hover {
+  background-color: yellow;
+  font-size: 18px;
 }
+    
   
 
   
