--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  background-color: gray;
+  background-color: white;
   color: pink;
   margin: 30px;
   padding: 10px;
